k8s/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: task-app
  labels:
    app: task-app
