k8s/backend-dep.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: task-backend-deployment
  namespace: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-backend
  template:
    metadata:
      name: task-backend-deployment-pod
      labels:
        app: task-backend
    spec:
      containers:
        - name: task-backend
          image: rohankhanal14/task-backend:cleanup
          ports:
            - containerPort: 5050
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "200m"
