k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: task-app
spec:
  selector:
    app: task-backend
  ports:
    - name: http
      port: 5050
      targetPort: 5050
      protocol: TCP
  type: ClusterIP
