k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: task-app
  labels:
    app: task-frontend
spec:
  selector:
    app: task-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
